# rust_swig

cpp-example/cpp-part/: main.cpp
cpp-example/rust-part/: Cargo.toml  build.rs
cpp-example/rust-part/src/: cpp_glue.rs.in  lib.rs
jni_tests/java/com/example/: Main.java
