[package]
name = "cpp-example-rust-part"
version = "0.1.0"
authors = ["Evgeniy A. Dushistov <dushistov@mail.ru>"]
edition = "2018"
build = "build.rs"

# ANCHOR: cargo_lib_section
[lib]
name = "cpp_example_rust_part"
crate-type = ["cdylib"]
# ANCHOR_END: cargo_lib_section

[dependencies]
ironoxide = {version="0.21.0", features=["blocking", "beta"]}
itertools = "~0.9.0"
chrono = { version = "~0.4", features = ["serde"] }
serde_json = "~1.0"
# ANCHOR: cargo_build_deps
[build-dependencies]
rust_swig = { path = "../../macroslib" }
# ANCHOR_END: cargo_build_deps

